# mcc

./: .gitignore  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  main.cpp  mcc.cpp
src/ast/: CMakeLists.txt  ast.h  ast_base.h  decls.h  exprs.h  fundec.h  fwd.h  int_expr.h  node.h  return_stmt.h  stmts.h
src/ast/decl/: CMakeLists.txt  decl.h  fundec.cpp  fundec.h
src/ast/expr/: CMakeLists.txt  expr.h  int_expr.cpp  int_expr.h
src/ast/stmt/: CMakeLists.txt  return_stmt.cpp  return_stmt.h  stmt.h
src/misc/: CMakeLists.txt  singleton.h  symbol.cpp  symbol.h
src/parser/: CMakeLists.txt  context.cpp  context.h  factory.cpp  factory.h  lexer.l  lexer.lxx  parser.yxx
src/parser/generator/: CMakeLists.txt  lexer.lxx  parser.yxx
tests/: CMakeLists.txt
tests/bad/: int_void_main.c  missing_paren_param_list.c  missing_semi.c  two_names.c
tests/good/basic/: empty_decl.c  paren_declarator.c  simple_var.c
tests/misc/: CMakeLists.txt  symbol.cc  symbol.cpp
